Fix all localhost URLs to use environment variables for production deployment

--- a/.env.production
+++ b/.env.production
@@ -21,8 +21,8 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 GOOGLE_APPLICATION_CREDENTIALS=./config/your-service-account-key.json
 
 # Application URLs (Update these for production)
-FRONTEND_URL=https://your-app-name.ondigitalocean.app
-BACKEND_URL=https://your-app-name.ondigitalocean.app
+FRONTEND_URL=https://sonicmoods-fldoc.ondigitalocean.app
+BACKEND_URL=https://sonicmoods-fldoc.ondigitalocean.app
 
 # Email Configuration (if using)
 EMAIL_HOST=smtp.gmail.com
