google cloud vision fix

--- a/spotify-recommender/.gitignore
+++ b/spotify-recommender/.gitignore
@@ -6,4 +6,4 @@ node_modules/
 
 # Komen: Abaikan fail kunci JSON Google Cloud awak
 # GANTIKAN DENGAN NAMA FAIL KUNCI AWAK YANG SEBENAR
-invertible-tree-448008-q4-0116f5ff5e46.json
+# invertible-tree-448008-q4-0116f5ff5e46.json
